# server

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
client/: admin.py  consumers.py  models.py  task.py  tasks.py
client/api/: urls.py
client/api/v1/serializers/: event.py
client/api/v1/views/: __init__.py  event.py
client/migrations/: 0001_initial.py  0002_alter_event_options_event_thumbnail_and_more.py  0003_remove_event_log_thumbnail.py
client/models/: __init__.py  chat.py
kernel/: __init__.py  asgi.py  celery.py  settings.py  urls.py
